<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66e3749a"
    tools:context=".PopUpInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="86dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:gravity="center"
            android:text="Enter the following info:" />

        <EditText
            android:id="@+id/input_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:ems="10"
            android:gravity="center"
            android:hint="Weight (lb)"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/input_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:ems="10"
            android:gravity="center"
            android:hint="Height (in)"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/input_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:ems="10"
            android:gravity="center"
            android:hint="Age"
            android:inputType="number" />

        <Button
            android:id="@+id/personal_info_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="sendMessage"
            android:text="Submit" />

    </LinearLayout>


</RelativeLayout>