<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".GoalsDisplay">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal">
        <TextView
            android:id="@+id/AddWorkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="Add Workout"/>

        <Spinner
            android:id="@+id/workoutSpinner"
            android:layout_width="314dp"
            android:layout_height="41dp"
            android:entries="@array/workoutOptions" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal">
            <NumberPicker
                android:layout_marginTop="15dp"
                android:id="@+id/lengthPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/AddWorkout" />
            <TextView
                android:id="@+id/minQuant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MINUTES"
                android:textSize="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal">
                <EditText
                    android:id="@+id/in_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SELECT DATE"
                    android:id="@+id/btn_date"/>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/in_time"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SELECT TIME"
                    android:id="@+id/btn_time"/>

            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/addWorkoutSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendMessage"
            android:text="Submit"></Button>

    </LinearLayout>

    <!--android:layout_marginEnd="0dp"-->
    <!--android:layout_marginStart="0dp"-->

</RelativeLayout>